--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,7 +4,7 @@
     "settings": {
         "terminal.integrated.defaultProfile.linux": "pwsh"
     },
-    "postAttachCommand": "mv /root/shovel/apps/scoop/current /root/shovel/apps/scoop/original && chmod 600 ~/.ssh/config && ln -s /workspaces/Core/ /root/shovel/apps/scoop/current", // TODO: Remove hardcoded workspace
+    "postAttachCommand": "mv /root/Shovel/apps/scoop/current /root/Shovel/apps/scoop/original && chmod 600 ~/.ssh/config && ln -s /workspaces/Core/ /root/Shovel/apps/scoop/current", // TODO: Remove hardcoded workspace
     "mounts": [
         "source=${localEnv:HOME}${localEnv:USERPROFILE}/.ssh,target=/root/.ssh,type=bind,consistency=cached",
     ],
@@ -12,8 +12,11 @@
     "remoteUser": "root",
     "extensions": [
         "DavidAnson.vscode-markdownlint",
+        "eamodio.gitlens",
         "EditorConfig.EditorConfig",
+        "gruntfuggly.todo-tree",
         "k--kato.intellij-idea-keybindings",
+        "medo64.render-crlf",
         "ms-vscode.powershell-preview",
         "redhat.vscode-yaml",
         "usernamehw.errorlens",
